--- a/package.json
+++ b/package.json
@@ -1,28 +1,54 @@
 {
-  "name": "biasbuster-mcp-server",
-  "version": "1.0.0",
-  "description": "AI-powered bias detection server for Biasbuster",
+  "name": "biasbuster",
+  "version": "1.1.0",
+  "description": "AI-powered bias detection and mitigation tool for news articles",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "test": "jest",
+    "lint": "eslint . --ext .ts"
   },
+  "keywords": [
+    "bias",
+    "ai",
+    "media",
+    "literacy",
+    "nlp",
+    "machine-learning"
+  ],
+  "author": "Biasbuster Team",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "langid": "^0.1.1",
+    "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
+    "openai": "^4.20.1",
+    "@anthropic-ai/sdk": "^0.16.1",
+    "@google-ai/generativelanguage": "^2.0.0",
+    "googleapis": "^128.0.0",
+    "langdetect": "^0.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  },
-  "author": "Biasbuster Team",
-  "license": "MIT"
+    "@types/jest": "^29.5.10",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.54.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
+  }
 } 
