--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "node dist/index.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "test": "jest",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "screenshots": "node scripts/generate-screenshots.js",
+    "docs": "npm run screenshots && echo 'Documentation assets generated'",
+    "prepare-demo": "npm run build && npm run docs",
+    "mock-server": "cross-env AI_SERVICE=mock ts-node src/index.ts"
   },
   "keywords": [
     "bias",
@@ -44,6 +48,7 @@
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
