--- a/package.json
+++ b/package.json
@@ -38,7 +38,17 @@
     "@anthropic-ai/sdk": "^0.16.1",
     "@google-ai/generativelanguage": "^2.0.0",
     "googleapis": "^128.0.0",
-    "langdetect": "^0.2.1"
+    "langdetect": "^0.2.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "connect-mongo": "^5.1.0",
+    "express-session": "^1.17.3",
+    "cookie-parser": "^1.4.6",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -54,6 +64,14 @@
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express-session": "^1.17.10",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-local": "^1.0.38",
+    "@types/validator": "^13.11.7",
+    "@types/cookie-parser": "^1.4.6"
   }
 } 
