--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "screenshots": "node scripts/generate-screenshots.js",
     "docs": "npm run screenshots && echo 'Documentation assets generated'",
     "prepare-demo": "npm run build && npm run docs",
-    "mock-server": "cross-env AI_SERVICE=mock ts-node src/index.ts"
+    "mock-server": "cross-env AI_SERVICE=mock ts-node src/index.ts",
+    "mcp-http": "cross-env ENABLE_MCP_SERVER=true MCP_TRANSPORT=http ts-node src/mcp/index.ts",
+    "mcp-stdio": "cross-env ENABLE_MCP_SERVER=true MCP_TRANSPORT=stdio ts-node src/mcp/index.ts",
+    "mcp-dual": "cross-env ENABLE_MCP_SERVER=true MCP_TRANSPORT=dual ts-node src/mcp/index.ts"
   },
   "keywords": [
     "bias",
@@ -25,37 +28,43 @@
   "author": "Biasbuster Team",
   "license": "MIT",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.16.1",
+    "@google-ai/generativelanguage": "^2.0.0",
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
+    "googleapis": "^128.0.0",
     "helmet": "^7.1.0",
-    "langid": "^0.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "openai": "^4.20.1",
-    "@anthropic-ai/sdk": "^0.16.1",
-    "@google-ai/generativelanguage": "^2.0.0",
-    "googleapis": "^128.0.0",
-    "langdetect": "^0.2.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "connect-mongo": "^5.1.0",
-    "express-session": "^1.17.3",
-    "cookie-parser": "^1.4.6",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.10",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-local": "^1.0.38",
+    "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "cross-env": "^7.0.3",
@@ -64,14 +73,6 @@
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express-session": "^1.17.10",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/passport": "^1.0.16",
-    "@types/passport-jwt": "^3.0.13",
-    "@types/passport-local": "^1.0.38",
-    "@types/validator": "^13.11.7",
-    "@types/cookie-parser": "^1.4.6"
+    "typescript": "^5.3.2"
   }
-} 
+}
