--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "test": "jest",
-    "lint": "eslint . --ext .ts",
+    "test": "jest --passWithNoTests",
+    "lint": "eslint . --ext .ts,.js",
     "screenshots": "node scripts/generate-screenshots.js",
     "docs": "npm run screenshots && echo 'Documentation assets generated'",
     "prepare-demo": "npm run build && npm run docs",
@@ -70,6 +70,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
