Add advanced CI/CD pipeline with lint, build, test, security, git graph, and deploy jobs

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,6 +36,8 @@ jobs:
         node-version: [16.x, 18.x]
     steps:
       - uses: actions/checkout@v3
+      - name: List files before install
+        run: ls -la
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
@@ -43,6 +45,7 @@ jobs:
           cache: 'npm'
       - run: npm install
       - run: npm run build
+
 
   test:
     name: Run Tests
