--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
     "test:security": "jest __tests__/security.test.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^7.4.0",
+    "axios": "^1.9.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.17.1",
     "jsonwebtoken": "^9.0.1",
-    "bcryptjs": "^2.4.3",
+    "mongoose": "^7.4.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
     "@types/node": "^20.4.5",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   }
 }
