Enhance user experience by updating navigation and layout in the web platform, including new sections for AI literacy and ethics. Revise CSS for a modern theme and improved layout. Update README to reflect these changes and provide clearer project details.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,15 @@ jobs:
         node-version: [16.x]
       fail-fast: false
 
+    services:
+      mongodb:
+        image: mongo:5.0
+        ports:
+          - 27017:27017
+
+    env:
+      MONGODB_URI: mongodb://localhost:27017/biasbuster_test
+
     steps:
     - uses: actions/checkout@v3
     
@@ -97,6 +106,8 @@ jobs:
         key: ${{ runner.os }}-build-${{ github.sha }}
         restore-keys: |
           ${{ runner.os }}-build-
+
+
 
 
 
