--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "test:unit": "jest __tests__/script.test.js",
     "test:api": "jest __tests__/api.test.js",
     "test:performance": "jest __tests__/performance.test.js",
-    "test:security": "jest __tests__/security.test.js"
+    "test:security": "jest __tests__/security.test.js",
+    "test:verify": "node scripts/verify-tests.js",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --ci --coverage --reporters='default' --reporters='jest-junit'"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -30,7 +34,15 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.4.5",
+    "autocannon": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "jest-junit": "^16.0.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "mongodb-memory-server": "^10.1.4",
+    "puppeteer": "^24.9.0",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
