--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,11 +22,8 @@ jobs:
       - name: 📥 Install dependencies
         run: npm ci
       
-      - name: 🔍 Lint code
-        run: npm run lint --if-present
-      
-      - name: 🧪 Run tests
-        run: npm test --if-present
+      - name: 🔍 Type check
+        run: npm run type-check --if-present
       
       - name: 🏗️ Build project
         run: npm run build
@@ -47,7 +44,7 @@ jobs:
       - name: 📥 Install dependencies
         run: npm ci
       
-      - name: 🏗️ Build extension
+      - name: 🏗️ Build project
         run: npm run build
       
       - name: 📦 Archive extension
@@ -77,7 +74,7 @@ jobs:
         run: npm run build
       
       - name: 🚀 Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
