--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,10 +17,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
       
       - name: 📥 Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: 🔍 Type check
         run: npm run type-check --if-present
@@ -39,10 +38,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
       
       - name: 📥 Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: 🏗️ Build project
         run: npm run build
@@ -65,10 +63,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
       
       - name: 📥 Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: 🏗️ Build for production
         run: npm run build
