--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -19,10 +19,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
       
       - name: 📥 Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: 🔍 Run security audit
         run: npm audit --audit-level=high --production
