Fixed the critical TypeScript errors:
Replaced process.env with import.meta.env.VITE_API_KEY for Vite compatibility

Fixed type issues in AnalysisPanel by ensuring proper null handling

Removed unused imports from geminiService.ts

Created vite-env.d.ts to define environment variable types

Updated workflow to use VITE_API_KEY environment variable

The build should now work with Vite's environment variable system instead of Node.js process.env.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -69,6 +69,8 @@ jobs:
       
       - name: 🏗️ Build for production
         run: npm run build
+        env:
+          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
       
       - name: 🚀 Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
