Fixed the GitHub Pages deployment error by:
Added permissions for contents: read, pages: write, and id-token: write

Downgraded peaceiris/actions-gh-pages from v4 to v3 for better compatibility

The workflow should now deploy successfully to GitHub Pages.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   test:
     name: 🧪 Test & Build
@@ -70,7 +75,7 @@ jobs:
           VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
       
       - name: 🚀 Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
