--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,9 +73,14 @@ jobs:
         run: npm run build:vite
         env:
           VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
+
+      - name: 📂 List dist directory contents
+        run: ls -la ./dist
       
       - name: 🚀 Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          allow_empty_commit: true
+          force_orphan: true
