--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "ml-matrix": "^6.10.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
@@ -37,6 +38,7 @@
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.1",
     "typescript": "^5.5.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-pwa": "^0.17.5"
   }
 }
